PROJECT(kernel-llist C)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE ON)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})

SET(CMAKE_C_FLAGS "-D_BSD_SOURCE -std=c99 -Wall -W -O2")

INCLUDE_DIRECTORIES(./)

# Set the source file
SET(SNAKENCURSES_SRC animal_list.c
		     utils.c
		     main.c)

ADD_EXECUTABLE(kernel-llist ${SNAKENCURSES_SRC})

TARGET_LINK_LIBRARIES (kernel-llist ${LIBS})
